<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_logo"
            android:scaleType="centerInside"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageViewLogo"
            android:layout_alignTop="@+id/imageViewLogo"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="112dp"
            android:text="@string/login"
            android:textColor="#FD8200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLogin"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewLogin"
            android:layout_below="@+id/textViewLogin"
            android:layout_marginTop="15dp"
            android:ems="10" >
          <requestFocus />
            
        </EditText>


        <TextView
            android:id="@+id/textViewPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextLogin"
            android:layout_below="@+id/editTextLogin"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="#FD8200"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textViewPwd"
            android:layout_below="@+id/textViewPwd"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPassword"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="24dp"
            android:layout_toRightOf="@+id/textViewLogin"
            android:text="@string/connexion" />

        <Button
            android:id="@+id/buttonSubscribeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageViewLogo"
            android:layout_alignLeft="@+id/buttonConnect"
            android:text="@string/subscribe" />

</RelativeLayout>
